--- a/ProjectManagementSystem/Views/Home/Index.cshtml
+++ b/ProjectManagementSystem/Views/Home/Index.cshtml
@@ -2,4 +2,143 @@
     ViewData["Title"] = "Home Page";
 }
 
+<div class="container">
+
+
+    <div class="col-12">
+        <div class="card">
+            <div class="card-body">
+                <div id="nChart"></div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="col-6">
+        <div class="card">
+            <div class="card-body">
+                <div id="barChart"></div>
+            </div>
+        </div>
+    </div>
+
+
+
+</div>
+
+
+
 <a class="btn btn-primary" asp-action="AddData">添加数据</a>
+
+
+
+@section Scripts{
+
+    <script>
+        window.onload = function () {
+            // 获取需要绘制图表的 DOM 元素
+            var dom = document.getElementById("nChart");
+
+            // 初始化 ECharts 实例
+            var nChart = echarts.init(dom);
+
+            // 配置图表选项
+            var option = {
+                title: {
+                    text: '饼图示例',
+                    left: 'center'
+                },
+                tooltip: {
+                    trigger: 'item',
+                    formatter: '{a} <br/>{b}: {c} ({d}%)'
+                },
+                series: [
+                    {
+                        name: '访问来源',
+                        type: 'pie',
+                        radius: '70%',
+                        data: [
+                            { value: 335, name: '直接访问' },
+                            { value: 310, name: '邮件营销' },
+                            { value: 234, name: '联盟广告' },
+                            { value: 135, name: '视频广告' },
+                            { value: 1548, name: '搜索引擎' }
+                        ],
+                        emphasis: {
+                            itemStyle: {
+                                shadowBlur: 10,
+                                shadowOffsetX: 0,
+                                shadowColor: 'rgba(0, 0, 0, 0.5)'
+                            }
+                        }
+                    }
+                ]
+            };
+
+            // 使用配置项绘制图表
+            nChart.setOption(option);
+        };
+    </script>
+
+    <script>
+
+        $(document).ready(function () {
+            $.ajax({
+                url: '@Url.Action("GetBarData", "Home")',
+                type: 'GET',
+                dataType: 'json',
+                success: function (data) {
+                    var options = {
+                        series: data.series,
+                        chart: {
+                            type: 'bar',
+                            height: 350,
+                            stacked: true,
+                        },
+                        plotOptions: {
+                            bar: {
+                                horizontal: true,
+                                dataLabels: {
+                                    total: {
+                                        enabled: true,
+                                        offsetX: 0,
+                                        style: {
+                                            fontSize: '13px',
+                                            fontWeight: 900
+                                        }
+                                    }
+                                }
+                            },
+                        },
+                        stroke: {
+                            width: 1,
+                            colors: ['#fff']
+                        },
+                        title: {
+                            text: '项目任务状态'
+                        },
+                        xaxis: {
+                            categories: data.categories
+                        },
+                        yaxis: {
+                            title: {
+                                text: undefined
+                            },
+                        },
+                        fill: {
+                            opacity: 1
+                        },
+                        legend: {
+                            position: 'top',
+                            horizontalAlign: 'left',
+                            offsetX: 40
+                        }
+                    };
+
+                    var chart = new ApexCharts(document.querySelector("#barChart"), options);
+                    chart.render();
+                }
+            });
+        });
+    </script>
+}
