--- a/ProjectManagementSystem/Views/Project/Index.cshtml
+++ b/ProjectManagementSystem/Views/Project/Index.cshtml
@@ -35,6 +35,7 @@
                             <div class="accordion-item">
                                 <h2 class="accordion-header" id="heading-@project.Id">
                                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-@project.Id" aria-expanded="false" aria-controls="collapse-@project.Id">
+                                        @project.Name
                                     </button>
                                 </h2>
                                 <div id="collapse-@project.Id" class="accordion-collapse collapse" aria-labelledby="heading-@project.Id" data-bs-parent=".accordion">
